# robotics-course

./: .gitignore  .gitmodules  README.md
calibration_demo/: CMakeLists.txt  package.xml
calibration_demo/config/: magnetometer_calibration.yaml
calibration_demo/src/: gyroscope.cpp  inertial_odom_acc_mag.cpp  magnetometer_calibration.cpp
calimation_demo/: CMakeLists.txt  package.xml
calimation_demo/config/: magnetometer_calibration.yaml
calimation_demo/src/: magnetometer_calibration.cpp
g++/dh/: dh.hpp  ex1.cpp  ex2.cpp  ex3.cpp
g++/eigen_vs_std_matrix/: eigen_vs_std_eigen.cpp  eigen_vs_std_std.cpp
g++/poe/: ex1.cpp  poe.hpp
kinematics_demo/: CMakeLists.txt  package.xml
kinematics_demo/include/kinematics_demo/: se3.hpp  so3.hpp
kinematics_demo/launch/: singularity.launch
kinematics_demo/src/: fk_main.cpp  fk_mainold.cpp  ik_linear_cartesian.cpp  ik_main.cpp  obvious_test.cpp  singularity.cpp  ws_drawing.cpp
kinematics_demo/test/: se3_test.cpp  so3_test.cpp
lidar_roi_example/: CMakeLists.txt  package.xml
lidar_roi_example/include/lidar_roi_example/: vlp16_roi.h
lidar_roi_example/launch/: lidar_roi.launch
lidar_roi_example/rviz/: roi_rviz.rviz
lidar_roi_example/src/: main.cpp  vlp16_roi.cpp
pick_n_place/: CMakeLists.txt  package.xml
pick_n_place/launch/: demo.launch  my_moveit.rviz  puma_cpp_node.launch
pick_n_place/src/: main.cpp
puma560_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
puma560_moveit_config/config/: Puma560.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
puma560_moveit_config/launch/: default_warehouse_db.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  planning_context.launch  ros_controllers.launch  trajectory_execution.launch.xml  warehouse.launch
puma560_w_collision_description/: README.md  package.xml
puma560_w_collision_description/urdf/: puma560_robot.urdf.xacro
puma560_w_collision_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
puma560_w_collision_moveit_config/config/: fake_controllers.yaml
puma560_w_collision_moveit_config/launch/: Puma560_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  ompl_planning_pipeline.launch.xml  sensor_manager.launch.xml  trajectory_execution.launch.xml
robots/puma560_description/: CMakeLists.txt  LICENSE  README.md  package.xml
robots/puma560_description/cad/: markerpen.stl
robots/puma560_description/urdf/: puma560_robot.urdf  puma560_robot.urdf.xacro
robots/puma560_moveit_config/: package.xml
robots/puma560_moveit_config/config/: ros_controllers.yaml
robots/puma560_moveit_config/launch/: Puma560_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch
robots/puma560_w_collision_description/: CMakeLists.txt
robots/puma560_w_collision_description/cad/: marker_pen.prt.1  puma_link2.prt.1
robots/puma560_w_collision_description/urdf/: Puma560.gv
robots/puma560_w_collision_moveit_config/config/: Puma560.srdf  kinematics.yaml  ompl_planning.yaml
robots/puma560_w_collision_moveit_config/launch/: demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  warehouse.launch  (+5 more)
robots/scara_description/: package.xml
robots/scara_moveit_config/: CMakeLists.txt
rosbag_archive/: circle.bag  encoder.bag  gps.bag  mag_calibration.bag  steady.bag  x_tilt.bag  xz_tilt.bag  yz_tilt.bag
rosbag_archive/imu/: diagonal_tilt.bag  y_tilt.bag  z_tilt.bag
rrr_description/: CMakeLists.txt  package.xml
rrr_description/launch/: gazebo.launch
rrr_description/meshes/: link3.STL  link4.STL
rrr_description/urdf/: rrr_description.csv  rrr_description.urdf
rrr_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rrr_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  rrr_description.srdf
rrr_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  ros_controllers.launch  rrr_description_moveit_controller_manager.launch.xml  run_benchmark_ompl.launch
scara_description/launch/: gazebo.launch
scara_description/meshes/: link3.STL
scara_description/urdf/: scara_description.csv  scara_description.urdf  scara_description.urdf.bak
scara_moveit_config/: .setup_assistant  package.xml
scara_moveit_config/config/: kinematics.yaml  ros_controllers.yaml
scara_moveit_config/launch/: moveit.rviz
simscape_demo/: CMakeLists.txt  package.xml
simscape_demo/launch/: friction.launch  gravity.launch  position.launch
simscape_demo/model/: bottom_기본_sldprt.STEP  tcp_기본_sldprt.STEP  top_기본_sldprt.STEP  xz_plane.xml
simscape_demo/src/: friction_compensation.cpp  gravity_compensation.cpp  position.cpp
traj_plan/: CMakeLists.txt  package.xml
traj_plan/launch/: test.launch
traj_plan/msg/: PoseStampedArray.msg
traj_plan/src/: traj_plan.cpp  waypoint_pub.cpp
traj_plan/srv/: JointInterpolation.srv
turtle_control/: CMakeLists.txt  package.xml
turtle_control/bag/: sensor_record.bag
turtle_control/launch/: demo.launch  record.launch
turtle_control/msg/: kf.msg
turtle_control/src/: sensor_model.cpp  turtle_control.cpp  turtle_localization.cpp
turtlebot_path_tracker/: CMakeLists.txt  ntrip_ros.launch  package.xml  zed-f9p.yaml
turtlebot_path_tracker/matlab/: Turtlebot_control.m
turtlebot_path_tracker/msg/: LocalPathPoints.msg
turtlebot_path_tracker/turtlebot_path_tracker/: CMakeLists.txt
workspace/: CMakeLists.txt  package.xml
workspace/launch/: reachable_ws_fk.launch  reachable_ws_ik.launch  ws_drawing.launch
workspace/src/: reachable_ws_fk.cpp  reachable_ws_ik.cpp  simple_drawing.cpp
(+59 files in other folders)
